# WebScraping-BlackFriday

./: .gitignore  LICENCE.md  README.md  pyproject.toml
src/dashbord/: app.py
src/extract/: settings.py
src/extract/spiders/: amazon.py  mercadolivre.py
src/transforme/: pipeline.py
vscode/: launch.json
