[tool.poetry]
name = "webscraping"
version = "0.1.0"
description = ""
authors = ["Rafael <rafaellevicodur2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.7"
scrapy = "^2.12.0"
streamlit = "^1.40.2"
taskipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
scrapy = "cd src/extract && scrapy crawl mercadolivre -o ../../data/data.json"
dash = "cd src/transforme && python pipeline.py && cd .. && cd dashbord && streamlit run app.py"
